--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                 <hr>
             <p>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta aperiam sint dolorem perferendis totam, quaerat accusantium, minus natus autem quam enim corrupti sit ducimus quibusdam adipisci. Atque necessitatibus doloremque ut.
+                <h1>Exchange:</h1>
+                <h2 id="info1">text</h2>
+                
+                <script src="first.js"></script>
             </p>
             <p>  
 
